# bodge

./: Cargo.toml
examples/: bevy_egui.rs  debug_draw.rs  scenes.rs  second_order_controller.rs
examples/maths/: closest_point.rs  colliding.rs  main.rs  polygon_is_clockwise.rs  polyline_simplification.rs  triangle_centroid.rs  triangle_circumcenter.rs  triangle_incenter.rs  triangulation_bowyer_watson.rs  triangulation_ear_clipping.rs
examples/maths/util/: draggable.rs  mod.rs  point_list_builder.rs  polygon_builder.rs  stepper.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  macros.rs  prelude.rs
src/bevy/: cursor.rs  egui_block_input.rs  label.rs  mod.rs  scenes.rs
src/bevy/debug_draw/: draw.rs  drawable.rs  mod.rs  style.rs
src/collision/: colliding.rs  mod.rs
src/control/: mod.rs
src/geometry/: aabb.rs  circle.rs  line.rs  line_ray.rs  line_segment.rs  mod.rs  polyline.rs  triangle.rs  vertex_list.rs
src/utility/: mod.rs  sortable.rs
