[package]
name = "bodge"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.22"
bevy = { version = "0.9", default-features = false, features = [ "render", "bevy_asset" ], optional = true }
bevy_egui = { version = "0.19", optional = true }
bodge_macros = { path = "./macros" }

[dev-dependencies]
bevy = { version = "0.9", default-features = true }
bevy_egui = { version = "0.19" }
rand = "0.8"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4"

[features]
default = [ "bevy", "bevy_egui", "bodge_assert" ]
bodge_assert = []
